--- a/src/pages/campaigns/view.html
+++ b/src/pages/campaigns/view.html
@@ -9,7 +9,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>    
-    <ion-title>{{ 'page.campaigns.preview' | translate }}</ion-title>
+    <ion-title>CHANGED</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
