--- a/src/pages/campaigns/view.html
+++ b/src/pages/campaigns/view.html
@@ -1,5 +1,8 @@
 
 <style>
+  .container {
+    height: 100%;
+  }
   #map {
     height: 100%;
   }
@@ -13,6 +16,22 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
+  <div class="container">
+    <div *ngIf="campaign">
+      <ion-list>
+        <div ion-item *ngFor="let map of campaign.maps">
+          <button ion-item>{{ map.name }}</button>
+          <div ion-item *ngFor="let group of map.groups">
+            <button ion-item (click)="mapit(group)">{{ group.name }}</button>
+            <input [value]="group.id" type="checkbox" ng-model="selected[group.id]"> {{ group.name }}
+          </div>
+        </div>
+      </ion-list>
+      <button ion-item (click)="mapit($event)">Map It!</button>
+      <button ion-item (click)="deleteMarkers()">Remove</button>
+    </div>
+    <div #map id="map"></div>
+  </div>
   <ion-card *ngIf="campaign">
     <ion-card-content>
       <h1>{{ campaign.title }}</h1>
@@ -168,5 +187,4 @@
       </ion-col>
     </ion-row>
   </ion-card>
-  <div #map id="map"></div>
 </ion-content>
