ticket view map and geolocation fitbounds

--- a/src/pages/tickets/view.html
+++ b/src/pages/tickets/view.html
@@ -126,7 +126,7 @@
             <h2>latitude</h2>
           </ion-col>          
           <ion-col>
-            <span>{{ ticket.latitude }}</span>
+            <span>{{ ticket.data.latitude }}</span>
           </ion-col>
         </ion-row>
       <ion-row>
@@ -134,7 +134,7 @@
             <h2>longitude</h2>
           </ion-col>          
           <ion-col>
-            <span>{{ ticket.longitude }}</span>
+            <span>{{ ticket.data.longitude }}</span>
           </ion-col>
         </ion-row>
       <ion-row>
