--- a/src/pages/login-page/login-page.html
+++ b/src/pages/login-page/login-page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding no-auto-scroll>
 
   <ion-grid>
     <ion-row justify-content-around>
