--- a/src/pages/tickets/view.html
+++ b/src/pages/tickets/view.html
@@ -10,172 +10,77 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>    
-    <ion-title>{{ 'page.tickets.preview' | translate }}</ion-title>
+    <ion-title *ngIf="ticket">{{ ticket.data.first_name }} {{ ticket.data.last_name }}</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
+
+  <div *ngIf="ticket">
+    <h1>{{ ticket.data.first_name }} {{ ticket.data.last_name }}</h1>
+  </div>
+
+  <div #map id="map" style="width: 90%;"></div>
+
   <ion-card *ngIf="ticket">
-    <ion-card-content>
-      <h1>{{ ticket.title }}</h1>
-      <ion-row>
-          <ion-col>
-            <h2>id</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.id }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>active</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.active }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>status</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.status }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>created</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.created }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>modified</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.modified }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>created_epoch</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.created_epoch }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>modified_epoch</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.modified_epoch }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>owner</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.owner }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>ownerg</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.ownerg }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>campaign_id</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.campaign_id }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>ticket_status_id</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.ticket_status_id }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>first_name</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.first_name }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>last_name</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.last_name }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>latitude</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.data.latitude }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>longitude</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.data.longitude }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>last_contacted</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.last_contacted }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>polygons</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.polygons }}</span>
-          </ion-col>
-        </ion-row>
-      <ion-row>
-          <ion-col>
-            <h2>name</h2>
-          </ion-col>          
-          <ion-col>
-            <span>{{ ticket.name }}</span>
-          </ion-col>
-        </ion-row>
-          </ion-card-content>
-    <ion-row>
-      <ion-col>
-        <button ion-button icon-left clear small color="secondary" (click)="editTickets(ticket)">
-          <ion-icon name="construct"></ion-icon>
-          <div>{{ 'button.edit' | translate }}</div>
-        </button>          
-      </ion-col>
-      <ion-col text-right>
-        <button ion-button icon-left clear small color="danger" (click)="deleteTickets(ticket)">
-          <ion-icon name="trash"></ion-icon>
-          <div>{{ 'button.delete' | translate }}</div>
-        </button>          
-      </ion-col>
-    </ion-row>
+
+    <ion-card-header style="background-color: #d9d9db;">
+      <h1>Datapoints</h1>
+    </ion-card-header>
+
+    <ion-card-content style="padding-top: 6px;">
+      <ion-list>
+        <div ion-item *ngFor="let datapoint of ticket.datapoints">
+          <ion-row>
+              <span style="margin: auto; font-weight: bold;">{{ datapoint.datapoint_name }}</span>
+          </ion-row>
+          <ion-row *ngIf="datapoint.value_numeric">
+            <span style="margin: auto;">{{ datapoint.value_numeric }}</span>
+          </ion-row>
+          <ion-row *ngIf="datapoint.value_boolean">
+            <span style="margin: auto;">{{ datapoint.value_boolean }}</span>
+          </ion-row>
+          <ion-row *ngIf="datapoint.value_option">
+            <span style="margin: auto;">{{ datapoint.value_option }}</span>
+          </ion-row>
+          <ion-row *ngIf="datapoint.value_text">
+            <span style="margin: auto;">{{ datapoint.value_text }}</span>
+          </ion-row>
+        </div>
+      </ion-list>
+    </ion-card-content>
   </ion-card>
-  <div #map id="map"></div>
+
+  <ion-card *ngIf="ticket">
+
+    <ion-card-header style="background-color: #d9d9db;">
+      <h1>Needs</h1>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-list style="padding-top: 6px;">
+        <ng-container *ngFor="let need of ticket.needs">
+          <div ion-item *ngIf="need.has_or_needs==0" style="background-color: #f47373; width: auto; height: auto; border-color: black; border-style: solid; border-radius: 5px; border-width: 1px; margin-bottom: 2px;">
+            <ion-row>
+                <span style="margin: auto; font-weight: bold;">{{ need.name }}</span>
+            </ion-row>
+            <ion-row>
+              <span style="margin: auto;">Needs {{ need.amount }}</span>
+            </ion-row>
+          </div>
+          <div ion-item *ngIf="need.has_or_needs==1">
+            <ion-row>
+                <span style="margin: auto; font-weight: bold;">{{ need.name }}</span>
+            </ion-row>
+            <ion-row>
+              <span style="margin: auto;">Has {{ need.amount }}</span>
+            </ion-row>
+          </div>
+        </ng-container>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+  
+
 </ion-content>
+
+
