--- a/src/pages/register-page/register-page.html
+++ b/src/pages/register-page/register-page.html
@@ -18,8 +18,13 @@
         <form [formGroup]="regData" (ngSubmit)="register()">
 
           <ion-item>
-            <ion-label floating>{{ 'label.name' | translate }}:</ion-label>
-            <ion-input type="text" formControlName="name"></ion-input>
+            <ion-label floating>First Name:</ion-label>
+            <ion-input type="text" formControlName="first_name"></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label floating>Last Name:</ion-label>
+            <ion-input type="text" formControlName="last_name"></ion-input>
           </ion-item>
 
           <ion-item>
