--- a/src/pages/notifications/view.html
+++ b/src/pages/notifications/view.html
@@ -1,5 +1,10 @@
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 <style>
+.top-right{
+  position: absolute;
+  right: 10%;
+  top: 10%;
+}
 </style>
 
 <ion-header>
@@ -8,13 +13,17 @@
       <ion-icon name="menu"></ion-icon>
     </button>    
     <ion-title>{{ 'page.notifications.preview' | translate }}</ion-title>
+    <div class="fa fa-3x fa-bell top-right" (click)="notifications()"></div>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
   <ion-card *ngIf="notification">
+    <ion-card-header style="background-color: black; margin-bottom: 12px;">
+      <h1 style="color: white;">{{ notification.title }}</h1>
+    </ion-card-header>
     <ion-card-content>
-      <h1>{{ notification.title }}</h1>
-      by {{ notification.author_name }}, p. {{ notification.pages_count }}
+      <h1>{{ notification.description }}</h1>
+      <!--by {{ notification.author_name }}, p. {{ notification.pages_count }} 
       <ion-row>
           <ion-col>
             <h2>id</h2>
@@ -118,8 +127,9 @@
           <ion-col>
             <span>{{ notification.read_status }}</span>
           </ion-col>
-        </ion-row>
+        </ion-row> -->
           </ion-card-content>
+          <!--
     <ion-row>
       <ion-col>
         <button ion-button icon-left clear small color="secondary" (click)="editNotifications(notification)">
@@ -133,6 +143,6 @@
           <div>{{ 'button.delete' | translate }}</div>
         </button>          
       </ion-col>
-    </ion-row>
+    </ion-row> -->
   </ion-card>
 </ion-content>
