--- a/src/pages/users/view.html
+++ b/src/pages/users/view.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
 <style>
   #map {
     height: 100%;
@@ -18,6 +18,11 @@
   .has{
     background-color: #17c43a;
   }
+  .top-right{
+    position: absolute;
+    right: 10%;
+    top: 10%;
+  }
 </style>
 
 
@@ -28,6 +33,7 @@
       <ion-icon name="menu"></ion-icon>
     </button>    
     <ion-title *ngIf="user">{{ user.data.first_name }} {{ user.data.last_name }}</ion-title>
+    <div class="fa fa-3x fa-bell top-right" (click)="notification()"></div>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
