--- a/src/pages/users/login.html
+++ b/src/pages/users/login.html
@@ -32,7 +32,11 @@
 
 
 <ion-content padding>
-
+  <div style="text-align: center;">
+    <h1>CrowdSource Rescue</h1>
+    <img src="circle.png">
+  </div>
+  
   <ion-grid>
     <ion-row justify-content-around>
       <ion-col col-sm-6 col-md-6 col-lg-4 col-xl-3  align-self-center>
